# CollabSpace

./: .gitignore  possible_requests.h
Client/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  authorization.cpp  authorization.h  authorization.ui  clientmain.cpp  clientmain.h  clientmain.ui  icons.qrc  main.cpp  networkmanager.cpp  networkmanager.h  serversettings.cpp  serversettings.h  serversettings.ui  systemmanager.cpp  systemmanager.h
ServerConsole/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  main.cpp
